Fix horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@
      }
  }
 
+html {
+  overflow-x: hidden;
+}
+
  .header{
   position: relative;
   height: 1000px;
